# SplatRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_deps.sh  requirements.md
specifications/: development-roadmap.md  phase-7-cuda-memory-spec.md  phase-8-cuda-kernels-spec.md  phase-9-optimization-spec.md  project-overview.md
src/: cuda_test.cpp  main.cpp
src/core/: camera.cpp  camera.h  engine.cpp  engine.h  input.cpp  input.h
src/cuda/: cuda_constants.h  cuda_constants_opt.cu  cuda_constants_opt.h  cuda_gl_interop.cu  cuda_gl_interop.h  cuda_manager.cu  cuda_manager.h  cuda_memory.cu  cuda_memory.h  cuda_rasterizer.cu  cuda_rasterizer.h  cuda_rasterizer_wrapper.cpp  cuda_rasterizer_wrapper.h  cuda_utils.h  kernel_profiler.cu  kernel_profiler.h
src/cuda/kernels/: kernels.h  projection.cu  projection_opt.cu  rasterization.cu  sorting.cu  tiling.cu
src/io/: ply_loader.cpp  ply_loader.h
src/math/: gaussian.cpp  gaussian.h  matrix_ops.cpp  matrix_ops.h  spherical_harmonics.cpp  spherical_harmonics.h
src/renderer/: axis_renderer.cpp  axis_renderer.h  cpu_rasterizer.cpp  cpu_rasterizer.h  opengl_display.cpp  opengl_display.h  text_renderer.cpp  text_renderer.h
tests/: CMakeLists.txt  test_camera.cpp  test_cpu_rasterizer.cpp  test_display_integration.cpp  test_engine.cpp  test_framework.h  test_gaussian.cpp  test_input.cpp  test_matrix_ops.cpp  test_ply_loader.cpp  test_projection.cpp  test_spherical_harmonics.cpp
tools/: mesh_to_gaussian.py  simple_gaussian_converter.py
